[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/tube.png" type="Texture" id=1]
[ext_resource path="res://img/cats/cat2.png" type="Texture" id=2]
[ext_resource path="res://img/cats/cat1.png" type="Texture" id=3]
[ext_resource path="res://img/cats/cat0.png" type="Texture" id=4]
[ext_resource path="res://tube.gd" type="Script" id=5]

[node name="tube" type="Node2D"]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="tubeSprite" type="Sprite" parent="."]
position = Vector2( 0.374573, 0 )
texture = ExtResource( 1 )

[node name="cat0" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="cat1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="cat2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
